feat(CI): Travis CI 向けの設定を追加

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@
 *.swp
 
 # Project Settings
+*pdf/
+build/
 *.yml
 *.css
 *.re
@@ -15,5 +17,6 @@
 *.pdf
 *.epub
 !src/*.re
+!.travis.yml
 !settings/*.yml
 !settings/*.css
