--- a/package.json
+++ b/package.json
@@ -27,6 +27,12 @@
     "gulp": "^3.9.0",
     "gulp-sass": "^2.1.0",
     "kotori": "^0.8.0",
-    "run-sequence": "^1.1.4"
+    "run-sequence": "^1.1.4",
+    "textlint": "^5.0.0",
+    "textlint-rule-max-ten": "^1.2.2",
+    "textlint-rule-no-doubled-joshi": "^1.2.3",
+    "textlint-rule-no-mix-dearu-desumasu": "^1.4.0",
+    "textlint-rule-sentence-length": "^1.0.4",
+    "textlint-rule-spellcheck-tech-word": "^4.1.0"
   }
 }
