--- a/.textlintrc
+++ b/.textlintrc
@@ -4,7 +4,10 @@
             "max": 3
         },
         "spellcheck-tech-word": true,
-        "no-doubled-joshi": true,
+        "no-doubled-joshi": {
+            "min_interval" : 10,
+            "strict": true
+        },
         "no-mix-dearu-desumasu": true,
         "sentence-length": {
             "max": 100
