--- a/.textlintrc
+++ b/.textlintrc
@@ -1,11 +1,14 @@
 {
+    "plugins": [
+        "jtf-style"
+    ],
     "rules": {
         "max-ten": {
             "max": 3
         },
         "spellcheck-tech-word": true,
         "no-doubled-joshi": {
-            "min_interval" : 8,
+            "min_interval" : 2,
             "strict": true
         },
         "no-mix-dearu-desumasu": true,
