--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "「ラブライブ！の参加者募集サイトの構成と作り方を具体的に説明する」というコンセプトの本",
   "scripts": {
     "build": "gulp build",
+    "test": "textlint draft",
     "watch": "gulp watch"
   },
   "repository": {
@@ -28,7 +29,8 @@
     "gulp-sass": "^2.1.0",
     "kotori": "^0.8.0",
     "run-sequence": "^1.1.4",
-    "textlint": "^5.0.0",
+    "textlint": "^5.0.3",
+    "textlint-plugin-jtf-style": "^0.8.8",
     "textlint-rule-max-ten": "^1.2.2",
     "textlint-rule-no-doubled-joshi": "^1.2.3",
     "textlint-rule-no-mix-dearu-desumasu": "^1.4.0",
