fix(ch0*): 必要な長音は付けた上で、textlint-plugin-JTF-styleのカタカナ長音に関するルールをdisable
ライブラリなどは長音を付けたくないため

--- a/.textlintrc
+++ b/.textlintrc
@@ -3,6 +3,7 @@
         "jtf-style"
     ],
     "rules": {
+        "jtf-style/2.1.6.カタカナの長音": false,
         "max-ten": {
             "max": 3
         },
