--- a/config.yml
+++ b/config.yml
@@ -7,18 +7,17 @@
 # ブック名(ファイル名になるもの。ASCII範囲の文字を使用)
 bookname: start-dash-of-site-making
 # 書名
-booktitle: サイト制作の START:DASH!!
+booktitle: サイト制作のSTART:DASH!!
 
 # 著者名。「, 」で区切って複数指定できる
-aut: ["kubosho", "fruitsnoodle"]
-a-prt: O2 Project
+aut: ["O2 Project"]
 
 # rights: 権利表記(配列で複数指定可)
 rights: (C) 2015 O2 Project
 # date: 刊行日(省略した場合は実行時の日付)
-date: "2015-08-16"
+date: "2015-12-31"
 # description: 説明
-description: 「ラブライブ！の参加者募集サイトの構成と作り方を具体的に説明する」というコンセプトで、アニメ内に出てきたラブライブ！募集サイトの作り方について書く本です。
+description: 「ラブライブ！参加者募集サイトの構成と作り方を具体的に説明する」本です。
 # subject: 短い説明用タグ(配列で複数指定可)
 subject: それは僕たちの語られなかった制作秘話――
 
