feat(example): ラブライブ参加者募集デモサイトに足りてなかったファイルを追加した

--- a/example/.gitignore
+++ b/example/.gitignore
@@ -3,9 +3,12 @@
 ##################################################
 
 dist/
-src/components/
-src/images/
+images/
 stats/
+components/lory/*
+components/lory/dist/*.js
+!components/lory/dist
+!components/lory/dist/lory.js
 
 # --------------------------------------------------
 
