change(example): ラブライブ参加者募集サイトの構成を更新

--- a/example/.gitignore
+++ b/example/.gitignore
@@ -3,12 +3,13 @@
 ##################################################
 
 dist/
-images/
 stats/
 components/lory/*
 components/lory/dist/*.js
 !components/lory/dist
 !components/lory/dist/lory.js
+components/Nico/*
+!components/Nico/dist
 
 # --------------------------------------------------
 
