--- a/example/example/bower.json
+++ b/example/example/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "lovelive-scout-site",
-  "version": "0.0.0",
-  "homepage": "https://github.com/o2project/lovelive-scout-site",
+  "version": "1.0.0",
+  "homepage": "https://github.com/o2project/start-dash-of-site-making",
   "authors": [
     "kubosho <ta2@o2p.jp>"
   ],
@@ -9,11 +9,12 @@
   "ignore": [
     "**/.*",
     "node_modules",
-    "src/components",
+    "components",
     "test",
     "tests"
   ],
   "dependencies": {
-    "lory": "~1.0.0"
+    "lory": "^1.6.8",
+    "Nico": "3.3.6-1.1.0"
   }
 }
