--- a/config.yml
+++ b/config.yml
@@ -1,8 +1,10 @@
 # review-epubmaker向けの設定ファイルの例。
-# yamlファイルをRe:VIEWファイルのある場所に置き、
+# yamlファイルをReVIEWファイルのある場所に置き、
 # 「review-epubmaker yamlファイル」を実行すると、<bookname>.epubファイルが
 # 生成されます。
 # このファイルはUTF-8エンコーディングで記述してください。
+
+# from https://github.com/kmuto/review/blob/master/doc/sample.yaml
 
 # ブック名(ファイル名になるもの。ASCII範囲の文字を使用)
 bookname: start-dash-of-site-making
@@ -10,22 +12,32 @@ bookname: start-dash-of-site-making
 booktitle: サイト制作のSTART:DASH!!
 
 # 著者名。「, 」で区切って複数指定できる
-aut: ["O2 Project"]
+aut: O2 Project
+prt: O2 Project
+prt_url:  http://o2p.jp/
+edt: kubosho_
+date: 2015-12-31
+rights: |
+  (C) 2015 O2 Project
 
-# rights: 権利表記(配列で複数指定可)
-rights: (C) 2015 O2 Project
-# date: 刊行日(省略した場合は実行時の日付)
-date: "2015-12-31"
+pubhistory: |
+  2015年12月31日  初版発行 v1.0.0
+
 # description: 説明
 description: 「ラブライブ！参加者募集サイトの構成と作り方を具体的に説明する」本です。
 # subject: 短い説明用タグ(配列で複数指定可)
 subject: それは僕たちの語られなかった制作秘話――
 
+# 固有IDに使用するドメイン
+urnid: https://github.com/o2project/start-dash-of-site-making
+
 # デバッグフラグ。nullでないときには一時ファイルをカレントディレクトリに作成し、削除もしない
 debug: null
 
-# CSSファイル(配列で複数指定可)
-stylesheet: ["epub.css"]
+# CSSファイル (yamlファイルおよびReVIEWファイルを置いたディレクトリにあること
+stylesheet: main.css
+# LaTeX用のスタイルファイル(styディレクトリ以下に置くこと)
+texstyle: techbooster-doujin
 
 # ePUBのバージョン (2か3)
 epubversion: 3
@@ -40,15 +52,11 @@ secnolevel: 2
 
 # 本文中に目次ページを作成するか。省略した場合はnull (作成しない)
 toc: true
-
 # 表紙を出力するか
 titlepage: true
 
 # 奥付を作成するか。デフォルトでは作成されない。trueを指定するとデフォルトの奥付、ファイル名を指定するとそれがcolophon.htmlとしてコピーされる
 colophon: true
-
-# review-compileに渡すパラメータ
-params: --stylesheet=epub.css
 
 epubmaker:
   # EPUBで表紙をコンテンツに含めるか。デフォルトでは作成されない。yesにするとiBooks等でも最初に表紙が表示されるようになる
