chore(textlintrc): JTF-styleのカタカナをdisable
クリエイティブコモンズをクリエーティブコモンズに直すように言われたため

--- a/.textlintrc
+++ b/.textlintrc
@@ -3,6 +3,7 @@
         "jtf-style"
     ],
     "rules": {
+        "jtf-style/2.1.5.カタカナ": false,
         "jtf-style/2.1.6.カタカナの長音": false,
         "jtf-style/4.2.1.感嘆符(！)": false,
         "max-ten": {
