--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "「ラブライブ！の参加者募集サイトの構成と作り方を具体的に説明する」というコンセプトの本",
   "scripts": {
     "build": "gulp build",
-    "test": "textlint articles/draft",
+    "test": "textlint test",
     "watch": "gulp watch"
   },
   "repository": {
