--- a/articles/config.yml
+++ b/articles/config.yml
@@ -20,9 +20,6 @@ date: 2015-12-31
 rights: |
   (C) 2015 O2 Project
 
-pubhistory: |
-  2015年12月31日  初版発行 v1.0.0
-
 # description: 説明
 description: 「ラブライブ！参加者募集サイトの構成と作り方を具体的に説明する」本です。
 # subject: 短い説明用タグ(配列で複数指定可)
@@ -31,33 +28,34 @@ subject: それは僕たちの語られなかった制作秘話――
 # 固有IDに使用するドメイン
 urnid: https://github.com/o2project/start-dash-of-site-making
 
-# デバッグフラグ。nullでないときには一時ファイルをカレントディレクトリに作成し、削除もしない
-debug: null
-
 # CSSファイル (yamlファイルおよびReVIEWファイルを置いたディレクトリにあること
 stylesheet: main.css
 # LaTeX用のスタイルファイル(styディレクトリ以下に置くこと)
 texstyle: techbooster-doujin
+texdocumentclass: ["jsbook", "b5j,twoside,openany"]
+
+# 目次として抽出する見出しレベル
+toclevel: 2
+# 本文でセクション番号を表示する見出しレベル
+secnolevel: 2
 
 # ePUBのバージョン (2か3)
 epubversion: 3
 # HTMLのバージョン (4か5。epubversionを3にしたときには5にする)
 htmlversion: 5
 
-# 目次として抽出する見出しレベル
-toclevel: 2
-# 採番の設定。採番させたくない見出しには「==[nonum]」のようにnonum指定をする
-# 本文でセクション番号を表示する見出しレベル
-secnolevel: 2
-
-# 本文中に目次ページを作成するか。省略した場合はnull (作成しない)
-toc: true
 # 表紙を出力するか
 titlepage: true
+# 本文中に目次ページを作成するか。省略した場合はnull (作成しない)
+toc: true
 
 # 奥付を作成するか。デフォルトでは作成されない。trueを指定するとデフォルトの奥付、ファイル名を指定するとそれがcolophon.htmlとしてコピーされる
 colophon: true
 
-epubmaker:
-  # EPUBで表紙をコンテンツに含めるか。デフォルトでは作成されない。yesにするとiBooks等でも最初に表紙が表示されるようになる
-  cover_linear: true
+# EPUBで表紙をコンテンツに含めるか。デフォルトでは作成されない。yesにするとiBooks等でも最初に表紙が表示されるようになる
+cover_linear: null
+# デバッグフラグ。nullでないときには一時ファイルをカレントディレクトリに作成し、削除もしない
+debug: null
+
+pubhistory: |
+  2015年12月31日  初版発行 v1.0.0
