--- a/articles/config.yml
+++ b/articles/config.yml
@@ -52,6 +52,7 @@ toc: true
 # 奥付を作成するか。デフォルトでは作成されない。trueを指定するとデフォルトの奥付、ファイル名を指定するとそれがcolophon.htmlとしてコピーされる
 colophon: true
 
+coverimage: cover/start-dash.jpg
 # EPUBで表紙をコンテンツに含めるか。デフォルトでは作成されない。yesにするとiBooks等でも最初に表紙が表示されるようになる
 cover_linear: null
 # デバッグフラグ。nullでないときには一時ファイルをカレントディレクトリに作成し、削除もしない
